--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,10 +2,10 @@ version: '3'
 services:
   postgres:
     image: postgres:latest
-    container_name: reserva-online-postgres
+    container_name: help-desk-postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: reservas_online_dev
+      POSTGRES_DB: help_desk_dev
     ports:
       - "5432:5432"
