feat(KAN-2): created mailer config

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-SMTP_USERNAME='joao'
-SMTP_PASSWORD='123'
+SMTP_USERNAME = "joao"
+SMTP_PASSWORD = "123"
+FROM_ADDRESS_SMTP = "hello@example.com"
+REPLY_TO_ADDRESS_SMTP = "reply@example.com"
